--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,4 +6,6 @@ jobs:
   test:
     uses: jill64/.github/.github/workflows/run-vitest.yml@main
   test-e2e:
-    uses: jill64/.github/.github/workflows/run-playwright.yml@main
+    uses: jill64/playwright-config/.github/workflows/run-playwright.yml@main
+    with:
+      hosting-provider: cloudflare
