--- a/demo/package.json
+++ b/demo/package.json
@@ -13,7 +13,9 @@
     "@jill64/sentry-sveltekit-cloudflare": "1.6.1",
     "@jill64/eslint-config-svelte": "1.0.3",
     "@sveltejs/adapter-cloudflare": "3.0.0",
-    "@sveltejs/kit": "1.30.3",
-    "vite": "5.0.9"
+    "svelte": "4.2.8",
+    "@sveltejs/kit": "2.0.0",
+    "vite": "5.0.9",
+    "@sveltejs/vite-plugin-svelte": "3.0.1"
   }
 }
