--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "test:e2e": "playwright test"
   },
   "peerDependencies": {
-    "@sveltejs/kit": "^1.0.0"
+    "@sveltejs/kit": "^2.0.0",
+    "svelte": "^4.0.0"
   },
   "prettier": "@jill64/prettier-config",
   "devDependencies": {
@@ -35,7 +36,7 @@
     "@jill64/playwright-config": "2.2.0",
     "@jill64/prettier-config": "1.0.0",
     "@playwright/test": "1.40.1",
-    "@sveltejs/kit": "1.30.3",
+    "@sveltejs/kit": "2.0.0",
     "svelte": "4.2.8",
     "typescript": "5.3.3",
     "vitest": "1.0.4"
