chore(package): update package name, version, and set as private

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-  "name": "",
+  "name": "xxxxxxxxxxxxxxxx",
+  "description": "",
+  "version": "0.0.0",
+  "private": true,
   "type": "module",
   "files": [
     "dist"
